--- a/portfolio-website/src/app/components/common/portfolio-display2/portfolio-display2.component.scss
+++ b/portfolio-website/src/app/components/common/portfolio-display2/portfolio-display2.component.scss
@@ -45,11 +45,11 @@
   transition: transform 1s ease;
 }
 
-.portfolio-display-wrapper:hover img{
+:host-context(body.hasHover) .portfolio-display-wrapper:hover img{
   transform: scale(1.05);
 }
 
-.portfolio-display-wrapper:hover .display-image-overlay{
+:host-context(body.hasHover) .portfolio-display-wrapper:hover .display-image-overlay{
   opacity: 1;
 }
 
